# spotify-preview

./: .flake8  Makefile  README.md  build.sh  clear.sh  initproject.sh  lambda_function.py  main.py  pyproject.toml  requirements.txt  test.py  test.sh  test_data.py  utils.py
docs/: CHANGELOG.md
src/: main.py  utils.py
